--- a/raksiam.html
+++ b/raksiam.html
@@ -1,22 +1,24 @@
 <html>
     <head>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="style.css">
         <title>ประวัติส่วนตัวของ รักษ์สยาม</title>
     </head>
-    <body bgcolor="#f5a9df">
+    <body bgcolor="#f5a9df" onload="popup()">
         <h1 align="center">ประวัติส่วนตัว</h1>
         <center><img src="D:\Plamugyak\profile_L208\Pictures\pfp.jpg" alt="คนหล่อเท่" width="300"></center><br>
-        <font size="5"><p><b>ชื่อ-นามสกุล:</b> นายรักษ์สยาม เทียบมา</p></font>
-        <font size="5"><p><b>ชื่อเล่น:</b> อารีฟีน</p></font>
-        <font size="5"><p><b>หมู่โลหิค:</b> กรุ๊ป โอ</p></font>
-        <font size="5"><p><b>วัน/เดือน/ปี เกิด:</b> 23 มกราคม พ.ศ.2548</p></font>
-        <font size="5"><p><b>ที่อยู่ปัจจุบัน:</b> 77/32 เค.ซี.คลัสเตอร์ นิมิตใหม่ ซอย ไมตรีจิต 7 ถนน นิมิตใหม่<br>
-        &emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp; ตำบล ลำลูกกา อำเภอ ลำลูกกา จังหวัด ปทุมธานี</p></font>
-        <font size="5"><p><b>หมายเลขโทรศัพท์:</b> 094-208-3502</p></font>
-        <font size="5"><p><b>อีเมล:</b>raksiam.tea@sbac.ac.th</p></font>
-        <font size="5"><p><b>ประวัติการศึกษา:</b><br>
+        <h3><b>ชื่อ-นามสกุล:</b> นายรักษ์สยาม เทียบมา</h3>
+        <h3><b>ชื่อเล่น:</b> อารีฟีน</h3>
+        <h3><b>หมู่โลหิค:</b> กรุ๊ป โอ</h3>
+        <h3><b>วัน/เดือน/ปี เกิด:</b> 23 มกราคม พ.ศ.2548</h3>
+        <h3><b>ที่อยู่ปัจจุบัน:</b> 77/32 เค.ซี.คลัสเตอร์ นิมิตใหม่ ซอย ไมตรีจิต 7 ถนน นิมิตใหม่<br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp; ตำบล ลำลูกกา อำเภอ ลำลูกกา จังหวัด ปทุมธานี</h3>
+        <h3><b>หมายเลขโทรศัพท์:</b> 094-208-3502</h3>
+        <h3><b>อีเมล:</b> raksiam.tea@sbac.ac.th</h3>
+        <h3><b>ประวัติการศึกษา: </b><br>
             &emsp;&emsp;&emsp;&emsp;&emsp;-<u>ปัจจุบัน</u> วิทยาลัยสยามบริหารธุรกิจ สะพานใหม่<br>
             &emsp;&emsp;&emsp;&emsp;&emsp;-<u>มัธยมศึกษาตอนต้น</u> นวมินทราชินูทิศ สตรีวิทยา ๒<br>
-            &emsp;&emsp;&emsp;&emsp;&emsp;-<u>ประถมศึกษา</u> สุเหร่าคลองสี่</p></font>
+            &emsp;&emsp;&emsp;&emsp;&emsp;-<u>ประถมศึกษา</u> สุเหร่าคลองสี่</h3>
         
     </body>
 </html>
